--- a/React-Fcc/src/index.css
+++ b/React-Fcc/src/index.css
@@ -33,3 +33,26 @@
   border: 1px solid black;
   margin: 10px 15px;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  padding: 25px 0px;
+}
+
+.blockholdedr {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  gap: 5px;
+  flex-wrap: wrap;
+}
+
+.blocks {
+  border: 1px solid black;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+  text-align: center;
+}
