--- a/React-Fcc/src/index.css
+++ b/React-Fcc/src/index.css
@@ -44,6 +44,7 @@
   display: flex;
   justify-content: center;
   padding: 10px;
+  height: 100vh;
   gap: 5px;
   flex-wrap: wrap;
 }
@@ -53,6 +54,5 @@
   width: 400px;
   display: flex;
   flex-direction: column;
-  height: 100px;
   text-align: center;
 }
